use overflow: overlay to avoid moving content

--- a/frontend/src/assets/css/global.css
+++ b/frontend/src/assets/css/global.css
@@ -1,3 +1,7 @@
+body {
+  overflow: overlay;
+}
+
 .logo {
   font-family: 'Alegreya Sans', sans-serif;
 }
